# android-rust-sdl2

./: .gitignore  CMakeLists.txt  README.md  build.sh  get_dependencies.sh
android/SDL2/: build.gradle
android/SDL2/src/main/: AndroidManifest.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/hoangpq/hello_sdl2/: HelloSDL2Activity.java
android/app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  HIDDeviceManager.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs  macros.rs
rust-lib/src/tetris/: constants.rs  game.rs  game_color.rs  mod.rs  others.rs  piece.rs  renderer.rs
src/: main.cpp
